[package]
name = "berry_picker"
version = "0.1.0"
edition = "2021"
authors = ["ekah Pruthvi1 <p1sribhat@gmail.com>"]
description = "A drag and drop application for Wayland"
license = "MIT"
repository = "https://github.com/ekahPruthvi/berry_picker.git"

[dependencies]
winit = { version = "0.27", features = ["wayland"] }
iced = "0.5"
iced_winit = "0.5"
